--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="darkreader-lock" />
         <title>BloBG</title>
         <style>
             body,
@@ -58,6 +59,126 @@
                 box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2),
                     0 4px 6px rgba(0, 0, 0, 0.15);
             }
+
+            .controls {
+                margin-top: 30px;
+                z-index: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 15px;
+            }
+
+            .controls label {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+            }
+            .controls input {
+                margin: 0 10px;
+                padding: 8px;
+                font-size: 1rem;
+                color: #4f4158;
+                background: rgba(255, 255, 255, 0.1);
+                backdrop-filter: blur(10px);
+                border: 1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 5px;
+                transition: background 0.3s, box-shadow 0.3s;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                    0 1px 3px rgba(0, 0, 0, 0.08);
+            }
+
+            .controls input:hover,
+            .controls input:focus {
+                background: rgba(255, 255, 255, 0.2);
+                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2),
+                    0 4px 6px rgba(0, 0, 0, 0.15);
+                outline: none;
+            }
+            .controls input[type="range"] {
+                appearance: none; /* Remove default styles */
+                width: 150px;
+                height: 10px;
+                margin: 0 10px;
+                background: rgba(255, 255, 255, 0.1);
+                border-radius: 5px;
+                border: 1px solid rgba(255, 255, 255, 0.3);
+                outline: none;
+                transition: background 0.3s, box-shadow 0.3s;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                    0 1px 3px rgba(0, 0, 0, 0.08);
+            }
+
+            .controls input[type="range"]:hover {
+                background: rgba(255, 255, 255, 0.2);
+            }
+
+            .controls input[type="range"]:focus {
+                background: rgba(255, 255, 255, 0.2);
+                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2),
+                    0 4px 6px rgba(0, 0, 0, 0.15);
+            }
+            .controls input[type="range"]::-ms-thumb,
+            .controls input[type="range"]::-webkit-slider-thumb,
+            .controls input[type="range"]::-moz-range-thumb {
+                -webkit-appearance: none;
+                appearance: none;
+                width: 16px;
+                height: 16px;
+                background: #4f4158;
+                border-radius: 50%;
+                border: 2px solid rgba(255, 255, 255, 0.5);
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2),
+                    0 1px 3px rgba(0, 0, 0, 0.1);
+                cursor: pointer;
+                transition: transform 0.2s;
+            }
+
+            .controls input[type="range"]:hover::-ms-thumb,
+            .controls input[type="range"]:hover::-webkit-slider-thumb,
+            .controls input[type="range"]:hover::-moz-range-thumb {
+                transform: scale(1.2);
+            }
+            .controls input[type="checkbox"] {
+                appearance: none;
+                width: 32px;
+                height: 32px;
+                border-radius: 15%;
+                background: rgba(255, 255, 255, 0.1);
+                border: 1px solid rgba(255, 255, 255, 0.3);
+                outline: none;
+                transition: background 0.3s, box-shadow 0.3s;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                    0 1px 3px rgba(0, 0, 0, 0.08);
+            }
+
+            .controls input[type="checkbox"]:checked {
+                background: rgba(255, 255, 255);
+                position: relative;
+            }
+
+            .controls input[type="checkbox"]:checked::after {
+                content: "✓";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: #4f4158;
+                font-size: 16px;
+                font-weight: bold;
+            }
+
+            .controls input[type="checkbox"]:hover:not(:checked) {
+                background: rgba(255, 255, 255, 0.2);
+                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2),
+                    0 4px 6px rgba(0, 0, 0, 0.15);
+            }
+
+            .controls input[type="checkbox"]:hover:checked {
+                background: rgba(255, 255, 255, 0.8);
+                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2),
+                    0 4px 6px rgba(0, 0, 0, 0.15);
+            }
             a {
                 color: white;
             }
@@ -73,8 +194,8 @@
                     href="https://www.khronos.org/opengl/wiki/Core_Language_(GLSL)"
                     >GLSL</a
                 >.<br />It's using a custom
-                <a href="https://en.wikipedia.org/wiki/Perlin_noise"
-                    >Perlin noise</a
+                <a href="https://en.wikipedia.org/wiki/Simplex_noise"
+                    >Simplex noise</a
                 >
                 implementation as a base which is then used to create the
                 Blobs.<br />The entire image finally gets some film grain
@@ -82,6 +203,14 @@
             </p>
             <p>
                 Update 1: Now with better performance and easier customization!
+            </p>
+            <p>
+                Update 2: Doesn't use Perlin noise anymore, but simplex noise
+                increasing performance even more! <br />
+                Also added a new feature to change the color of the blobs and a
+                new color mix mode. <br />
+                The HSV color mix mode will interpolate the colors in the HSV
+                color space instead of RGB.
             </p>
             <a
                 href="https://github.com/realRobotix/BloBG/blob/master/src/blob.frag"
@@ -91,10 +220,28 @@
             <a href="https://github.com/realRobotix/BloBG" class="button"
                 >GitHub Repository</a
             >
+            <div class="controls">
+                <label>
+                    Color 1:
+                    <input type="color" id="color1" value="#FFD600" />
+                </label>
+                <label>
+                    Color 2:
+                    <input type="color" id="color2" value="#FF006D" />
+                </label>
+                <label>
+                    HSV color mix mode:
+                    <input type="checkbox" id="HSVColorMixMode" />
+                </label>
+            </div>
         </div>
         <script>
             const canvas = document.getElementById("backgroundCanvas");
             const gl = canvas.getContext("webgl2");
+
+            const color1 = document.getElementById("color1");
+            const color2 = document.getElementById("color2");
+            const HSVColorMixMode = document.getElementById("HSVColorMixMode");
 
             if (!gl) {
                 console.error("WebGL 2 not supported");
@@ -169,6 +316,33 @@
                         }
                     }
 
+                    function hexToHsv(hex) {
+                        const r = parseInt(hex.slice(1, 3), 16) / 255;
+                        const g = parseInt(hex.slice(3, 5), 16) / 255;
+                        const b = parseInt(hex.slice(5, 7), 16) / 255;
+
+                        const max = Math.max(r, g, b);
+                        const min = Math.min(r, g, b);
+                        const delta = max - min;
+
+                        let h = 0;
+                        let s = max === 0 ? 0 : delta / max;
+                        let v = max;
+
+                        if (delta !== 0) {
+                            if (max === r) {
+                                h = (g - b) / delta + (g < b ? 6 : 0);
+                            } else if (max === g) {
+                                h = (b - r) / delta + 2;
+                            } else {
+                                h = (r - g) / delta + 4;
+                            }
+                            h /= 6;
+                        }
+
+                        return [h, s, v];
+                    }
+
                     function render(time) {
                         resizeCanvasToDisplaySize(canvas);
                         gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
@@ -183,6 +357,18 @@
                         gl.uniform1f(
                             gl.getUniformLocation(program, "iTime"),
                             time * 0.001
+                        );
+                        gl.uniform3f(
+                            gl.getUniformLocation(program, "uColor1"),
+                            ...hexToHsv(color1.value)
+                        );
+                        gl.uniform3f(
+                            gl.getUniformLocation(program, "uColor2"),
+                            ...hexToHsv(color2.value)
+                        );
+                        gl.uniform1ui(
+                            gl.getUniformLocation(program, "uHSVMix"),
+                            HSVColorMixMode.checked
                         );
                         gl.drawArrays(gl.TRIANGLES, 0, 6);
                         requestAnimationFrame(render);
